# poap_cert-dapp

./: LICENSE  README.md  poap_cert.code-workspace  pyproject.toml  structure.txt
projects/poap_cert/: .algokit.toml  README.md  poap.py  pyproject.toml
projects/poap_cert/.algokit/: .copier-answers.yml
projects/poap_cert/smart_contracts/: client.py
projects/poap_cert/smart_contracts/poap_contract/: config.py  contract.py  deploy_config.py  deploy_config_testnet.py
projects/poap_cert/smart_contracts/poap_contract/tests/: test_certificate.py  test_delete_certificate.py
projects/poapcert_frontend/: .algokit.toml  README.md  package-lock.json  package.json
projects/poapcert_frontend/.algokit/: .copier-answers.yml
scripts/: create_certificate.py  delete_certificate.py  deploy.py  get_certificate.py
